treat text inside <tt> as preformatted. avoids unfortunate linebreaks in commands and paths.
discussed with tj

--- a/opensmtpd/openbsd.css
+++ b/opensmtpd/openbsd.css
@@ -9,3 +9,7 @@ body {
 		max-width: 85%;
 	}
 }
+
+tt {
+	white-space: pre;
+}
